implement friend searches, fix friend ui scaling

--- a/app/src/app/character-widget/character-widget.component.html
+++ b/app/src/app/character-widget/character-widget.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" (click)="searchFriend()">
     <img class="profile-picture"src="{{profilePicture}}">
     <div class="{{class}} icons">
         <img class="{{class}} spec-icon" src="../../assets/images/{{specIcon}}">
