--- a/app/src/app/character-widget/character-widget.component.scss
+++ b/app/src/app/character-widget/character-widget.component.scss
@@ -1,4 +1,10 @@
 @import "../app.component.scss";
+.container:hover {
+    cursor:pointer;
+
+    border: 1px solid rgb(153, 153, 153);
+}
+
 .container {
     display: flex;
     flex-direction: row;
