--- a/app/src/app/common/navbar/navbar.component.scss
+++ b/app/src/app/common/navbar/navbar.component.scss
@@ -15,6 +15,8 @@ nav {
 
     background-color: rgb(1, 10, 49);
 
+    z-index: 1;
+
     p, a, input, button {
         margin-left: 2rem;
         background-color: rgb(1, 10, 49);
