--- a/app/src/app/common/navbar/navbar.component.scss
+++ b/app/src/app/common/navbar/navbar.component.scss
@@ -9,7 +9,7 @@ nav {
     justify-content: left;
     align-items: center;
     width: 100%;
-    height: 60px;
+    height: 80px;
     padding-right: 1rem;
     padding-left: 1rem;
 
@@ -17,10 +17,18 @@ nav {
 
     z-index: 1;
 
-    p, a, input, button {
+    a, input, button {
+        font-size: 1.3rem;
         margin-left: 2rem;
         background-color: rgb(1, 10, 49);
     }
+
+    p {
+        font-size: 2rem;
+        margin-left: 1rem;
+        background-color: rgb(1, 10, 49);
+    }
+
     button:hover {
         color: rgb(81, 102, 197);
     }
