--- a/app/src/app/welcome/welcome.component.scss
+++ b/app/src/app/welcome/welcome.component.scss
@@ -1,8 +1,8 @@
 @import "../app.component.scss";
 
 .container {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 90vh;
     
     display: flex;
     flex-direction: column;
