fix deathknight / dh naming bug, update docs images

--- a/app/src/app/fetch-test/fetch-test.component.html
+++ b/app/src/app/fetch-test/fetch-test.component.html
@@ -58,7 +58,7 @@
         </div>
     </div>
 </div>
-<footer>
+<div class="footer">
     <p>This website is powered by <a href="https://raider.io">Raider.io</a>'s API</p>
     <p>Currently updated for World of Warcraft: Dragonflight</p>
-</footer>
+</div>
