--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -5,9 +5,11 @@
     background-color: rgb(231, 232, 209);
 }
 
+html, body {
+    min-height: 100%;
+}
+
 body {
-    position: relative; 
-    min-height: 100vh;
     padding-top: 80px;
 }
 
