--- a/app/src/app/fetch-test/fetch-test.component.html
+++ b/app/src/app/fetch-test/fetch-test.component.html
@@ -60,5 +60,5 @@
 </div>
 <div class="footer">
     <p>This website is powered by <a href="https://raider.io">Raider.io</a>'s API</p>
-    <p>Currently updated for World of Warcraft: Dragonflight</p>
+    <p>Currently updated for World of Warcraft: Dragonflight Season 2</p>
 </div>
