--- a/app/src/app/fetch-test/fetch-test.component.scss
+++ b/app/src/app/fetch-test/fetch-test.component.scss
@@ -7,6 +7,7 @@
 .page-container {
     display: flex;
     flex-direction: row;
+    min-height: calc(100vh - 130px); // -navbar -footer
 
     .main-content {
         width: 100%;
@@ -212,9 +213,6 @@
 }
 
 .footer {
-    position: absolute;
-    bottom: 0;
-
     display: flex;
     flex-direction: row;
     justify-content: space-between;
